# ML

./: .gitignore  README.md  main.py
Ex1/Breast Cancer/: DecisionTree.py  NN.py  Naive Bayes.py  Preprocessing.py
Ex1/Loan/: DecisionTree.py  NN.py  Naive Bayes.py  Preprocessing.py
Ex1/Ozone Layer/: DecisionTree.py  NN.py  Naive Bayes.py  Preprocessing.py
Ex1/Satimages/: DecisionTree.py  NN.py  Naive Bayes.py
Ex2/: DT_default.py  NN_default.py  README.md  evolutionary_optimization.py  grid_search.py  grid_search_breast_cancer.py  grid_search_loan.py  grid_search_nb.ipynb  grid_search_satimage.py  grid_search_test.py  hyperp_config.py
Ex3/: README.md  pyproject.toml
Ex3/SRCNN-pytorch-master/: prepare.py  test.py  test_validation_set.py  train.py
Ex3/outputs/x3/: best.pth
Ex3/outputs/x3/2k_dataset/: epoch_0.pth  epoch_1.pth  epoch_2.pth  epoch_3.pth  epoch_4(BEST).pth
Ex3/src/ex3/: blur_image.py  downscale_image.py
datasets/Ozone/: data_preprocessed.pkl  edited_onehr.names
