[tool.poetry]
name = "ex3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ex3", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.2.0"
numpy = "^1.26.4"
pillow = "^10.2.0"
h5py = "^3.10.0"
tqdm = "^4.66.2"
datasets = "^2.17.1"
transformers = "^4.38.1"
huggingface-hub = {extras = ["cli"], version = "^0.20.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
